Add ReadMe. Update package-lock.json / yarn.lock.